<resources>
    <string name="app_name">taskManagerAndroid</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">ADD TASK</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="do_something">Do Something</string>
    <string name="task_description">Task Description</string>
    <string name="add_task_to_list">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="my_task">My Task</string>
    <string name="total_task">Total Task:</string>
    <string name="add_task_description">ADD TASK</string>
    <string name="add_task_submitted">SUBMITTED</string>
    <string name="all_tasks_page_title">All Tasks</string>
    <string name="profileEditButton">profileEditButton</string>
    <string name="task_details_activity_title">Task Details</string>
    <string name="task_details_activity_details_text_multiline" />
    <string name="task_details_activity_multiline_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tempus imperdiet nulla malesuada pellentesque elit eget. Nulla facilisi nullam vehicula ipsum a. Orci a scelerisque purus semper eget duis at tellus at. Pharetra diam sit amet nisl suscipit adipiscing bibendum.</string>
    <string name="user_name">User Name</string>
    <string name="user_nickname">User Nickname</string>
    <string name="save">Save</string>
    <string name="interview_for_swe_position">Interview for SWE position</string>
    <string name="walk_the_dog">Walk the Dog</string>
    <string name="finish_homework">Finish Homework</string>
    <string name="no_task_name">No Task</string>
    <string name="task_status">Task Status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_page_title">Sign Up Page</string>
    <string name="sign_up_email">email</string>
    <string name="sign_up_password">password</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="verify_account_title">Verify Account</string>
    <string name="verify_account_button">VERIFY</string>
    <string name="verification_number">Verification Number</string>
    <string name="login_page">LOGIN PAGE</string>
    <string name="login_button">LOGIN</string>
    <string name="logout_button">LOGOUT</string>
    <string name="task_location">Task Location</string>
    <string name="no_location">No Location</string>
    <string name="rewarded_ad">Reward Ad</string>
    <string name="interstitial_ad">Interstitial Ad</string>
</resources>