<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TaskDetailsActivity">

    <TextView
        android:id="@+id/taskDetailsActivityTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="48dp"
        android:text="@string/task_details_activity_title"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/taskDetailsActivityMultiLineEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/task_details_activity_details_text_multiline"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:text="@string/task_details_activity_multiline_text"
        android:textColorHint="#8D6E63"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/taskDetailsActivityTitleTextView"
        tools:hint="lorem" />

    <TextView
        android:id="@+id/taskDetailsActivityTaskStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:hint="@string/task_status"
        android:textColorHint="#A1887F"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDetailsActivityMultiLineEditText"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/taskDetailsActivityLocationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/task_location"
        android:textColorHint="#A1887F"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/taskDetailsActivityMultiLineEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDetailsActivityTitleTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>